# discord_webhook_ruiner

./: .gitignore  ReadMe.MD  pyproject.toml  requirements.txt
src/: __main__.py  discord_webhook_ruiner.py  webhook_api.py
